fixed overflow due to before element and added border to nav

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -141,7 +141,7 @@ a:hover {
 }
 
 section {
-  scroll-margin-top: 7.5rem;
+  scroll-margin-top: 7rem;
 }
 
 .section_wrapper {
@@ -242,6 +242,8 @@ section {
   width: 100%;
   padding: 1.25rem;
   background: #fff;
+  border: 0.3125rem solid #6922ff;
+  border-radius: 0 0 1rem 1rem;
 }
 
 .header.active .header__nav a {
@@ -349,7 +351,22 @@ section {
 .hero__content {
   width: 100%;
   text-align: center;
-  margin-top: 9.375rem;
+  margin-top: 4.375rem;
+}
+
+.hero__content .title-wrapper {
+  position: relative;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 9em;
 }
 
 .hero__content h1 {
