--- a/src/assets/scss/_globals.scss
+++ b/src/assets/scss/_globals.scss
@@ -17,6 +17,7 @@ body {
   line-height: 1.3;
   color: $black;
   overflow-x: hidden;
+  //max-width: 100vw;
 }
 
 h1,
@@ -57,7 +58,7 @@ a {
 }
 
 section {
-  scroll-margin-top: 7.5rem;
+  scroll-margin-top: 7rem;
 }
 
 .section_wrapper {
