--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -31,6 +31,8 @@
       padding: 1.25rem;
 
       background: $white;
+      border: 0.3125rem solid $dark-purple;
+      border-radius: 0 0 1rem 1rem;
 
       a {
         padding: 0.625rem;
